examples/object_oriented_programming/objects_and_classes/managing_inheritance_privacy_public/my_third_class.cpp
#include "my_third_class.hpp"

void my_third_class::func_third() {
  int a = pub;  // ok
  int b = prot; // ok
  //int c = priv; // error
}
